IGNITE-26018 <non-deprecated constructor>
Signed-off-by: ibessonov <bessonov.ip@gmail.com>